# usd-experiments

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
apps/: CMakeLists.txt
apps/openusd-parser/: CMakeLists.txt  openusd-parser.cpp
apps/openusd-parser/src/: CMakeLists.txt
apps/tinyusdz-parser/: CMakeLists.txt  tinyusdz-parser.cpp
apps/tinyusdz-parser/src/: CMakeLists.txt
cmake/: FindUSD.cmake
data/: .gitignore
